--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+html, body, .app-shell {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
   font-size: 16px;
 }
@@ -17,5 +23,30 @@ body {
   button {
     padding: 10px;
     margin: auto;
+  }
+}
+
+.app-shell {
+  display: flex;
+  flex-direction: column;
+  > header {
+    height: 40px;
+    background: rgb(119, 119, 119);
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+    h1 {
+      margin: 0;
+      color: white;
+      flex: 1;
+      text-align: center;
+      font-size: 20px;
+    }
+    a {
+      color: white;
+    }
+  }
+  > .content {
+    flex: 1;
   }
 }
